24 May 2024: Wouter
	- Fix #1064: Unbound 1.20 Cachedb broken?

24 May 2024: Yorgos
	- Fix #1059: Intermittent DNS blocking failure with local-zone and
	  always_nxdomain. Addition of local_zones dynamically via
	  unbound-control was not finding the zone's parent correctly.

21 May 2024: Wouter
	- Merge #1073: fix null pointer dereference issue in function
	  ub_ctx_set_fwd.
	- Fix to print a parse error when config is read with no name for
	  a forward-zone, stub-zone or view.
	- Fix for parse end of forward-zone, stub-zone and view.
	- Fix for #1064: Fix that cachedb expired messages are considered
	  insecure, and thus can be served to clients when dnssec is enabled.

17 May 2024: Yorgos
	- Merge #1069: Fix unbound-control stdin commands for multi-process
	  Unbounds.
	- Fix unbound-control commands that read stdin in multi-process
	  operation (local_zones_remove, local_zones, local_datas_remove,
	  local_datas, view_local_datas_remove, view_local_datas). They will
	  be properly distributed to all processes. dump_cache and load_cache
	  are no longer supported in multi-process operation.
	- Remove testdata/remote-threaded.tdir. testdata/09-unbound-control.tdir
	  now checks both single and multi process/thread operation.

16 May 2024: Yorgos
	- Merge #1070: Fix rtt assignement for low values of
	  infra-cache-max-rtt.

16 May 2024: Wouter
	- Fix #1071: [FR] Clear both in-memory and cachedb module cache with
	  `unbound-control flush*` commands.

15 May 2024: Yorgos
	- Add missing common functions to tdir tests.

10 May 2024: Wouter
	- Fix when the mesh jostle is exceeded that nameserver targets are
	  marked as resolved, so that the lookup is not stuck on the
	  requestlist.

8 May 2024: Wouter
	- Fix to squelch udp connect errors in the log at low verbosity about
	  invalid argument for IPv6 link local addresses.

7 May 2024: Wouter
	- Merge #1062: Fix potential overflow bug while parsing port in
	  function cfg_mark_ports.